# nutmeg

./: .gitignore  Cargo.toml  NEWS.md  README.md
.github/workflows/: cargo-audit.yml  tests.yml
examples/: abandon.rs  basic.rs  basic_model.rs  bench.rs  clear.rs  colored.rs  count_but_with_disabled_progress.rs  count_up.rs  display_model.rs  final_message.rs  fizzbuzz.rs  hide_and_reappear.rs  identical_updates_suppressed.rs  linear_model.rs  multi_line_progress.rs  multiline.rs  multithreaded.rs  only_print.rs  print_holdoff.rs  print_partial_lines.rs  rate_limited.rs  right_size_bar.rs  static_view.rs  stderr.rs  string_as_model.rs  suspend.rs  unbounded_model.rs  wide_progress_truncated.rs
examples/tracing/: Cargo.toml
examples/tracing/src/: main.rs
src/: ansi.rs  context.rs  destination.rs  helpers.rs  lib.rs  models.rs  options.rs  to_print.rs  width.rs  windows.rs
tests/: api.rs  captured_in_tests.rs  test_output_captured.rs
tests/api/: identical_output_suppressed.rs  main.rs
