[package]
name = "nutmeg"
version = "0.1.0"
edition = "2018"
description = "An unopinionated progress bar library"
license = "MIT"
repository = "https://github.com/sourcefrog/nutmeg"
keywords = ["progress", "progress-bar", "terminal", "ansi"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
atty = "0.2"
parking_lot = "0.12"
terminal_size = "0.1"
yansi = "0.5"

[dev-dependencies]
pretty_assertions = "1.1"
rand = "0.8"
