[package]
name = "nutmeg"
version = "0.1.5"
edition = "2021"
description = "An unopinionated progress bar library"
license = "MIT"
repository = "https://github.com/sourcefrog/nutmeg"
keywords = ["progress", "progress-bar", "terminal", "ansi"]
rust-version = "1.75"  # Could perhaps be even older, but this is 2 years at time of writing

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
atty = "0.2"
terminal_size = "0.2"
yansi = "0.5"

[dev-dependencies]
rand = "0.8"
tracing = "0.1"
tracing-subscriber = "0.3"

[workspace]
members = ["examples/tracing"]
