[package]
name = "nutmeg-tracing-example"
version = "0.1.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nutmeg = { path = "../..", version = "0.2.0-pre" }
tracing = "*"
tracing-fmt = "*"
tracing-subscriber = "*"
